tests/snapshots/human_output__host_edit.snap
---
source: tests/human_output.rs
description: "Edited host with its final tags, warning about a removed tag it never had."
---
$ dn host edit host-KQ4ZB7MXRWEPNA2C5TJ3YVHLDI --add-tag team:infra --remove-tag gone:1
Updated host "Build Server" (host-KQ4ZB7MXRWEPNA2C5TJ3YVHLDI) [100.100.0.12, fd00:c0:c0:2966:d3bf:a55d:49a0:6f18]
  Role: role-WEB
  env:prod
  site:hou
  team:infra
--- stderr
note: using <API_URL> (from DEFINED_API_URL)
warning: tag "gone:1" was not present on the host
