tests/snapshots/human_output__host_list.snap
---
source: tests/human_output.rs
description: "Host table, with a next-page hint on stderr."
---
$ dn host list
ID                               NAME          IP ADDRESSES
host-KQ4ZB7MXRWEPNA2C5TJ3YVHLDI  Build Server  100.100.0.12, fd00:c0:c0:2966:d3bf:a55d:49a0:6f18
host-M6TLA3VZQ2NXKC7EWJR5PBYHFO  Pixel Phone   100.100.0.39
--- stderr
note: using <API_URL> (from DEFINED_API_URL)
next page: dn host list --cursor=page-2
