tests/snapshots/human_output__host_search.snap
---
source: tests/human_output.rs
description: Host search shares the host list table.
---
$ dn host search build
ID                               NAME          IP ADDRESSES
host-KQ4ZB7MXRWEPNA2C5TJ3YVHLDI  Build Server  100.100.0.12, fd00:c0:c0:2966:d3bf:a55d:49a0:6f18
host-M6TLA3VZQ2NXKC7EWJR5PBYHFO  Pixel Phone   100.100.0.39
--- stderr
note: using <API_URL> (from DEFINED_API_URL)
next page: dn host search build --cursor=page-2
