tests/snapshots/human_output__network_delete.snap
---
source: tests/human_output.rs
description: Network delete with --yes.
---
$ dn network delete network-EXAMPLE --yes
Deleted network network-EXAMPLE.
--- stderr
note: using <API_URL> (from DEFINED_API_URL)
